[metadata]
name = "compgraph"
version = "1.0.0"
author = "itmo_nightsea"
author_email = "nightsea987@gmail.com"
description = "Computational graph for shad python course"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project]
name = "compgraph"
version = "1.0.0"

[tool.setuptools.packages.find]
where = ["compgraph"]

[options]
packages = "find:"
install_requires = ["click"]
